--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "STOIR - Sistem Inventory Management System",
   "type": "module",
+  "main": "electron/main.cjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "electron:dev": "concurrently -k \"npm:dev\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron:build": "npm run build",
     "preview": "vite preview",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest",
@@ -31,6 +34,10 @@
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
     "recharts": "^3.5.1",
+    "@fastify/cors": "^10.1.0",
+    "@fastify/static": "^8.3.0",
+    "fastify": "^5.6.0",
+    "sql.js": "^1.13.0",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.2"
   },
@@ -50,6 +57,9 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "vite": "^7.0.4",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "concurrently": "^9.2.1",
+    "electron": "^35.0.0",
+    "wait-on": "^8.0.4"
   }
 }
