--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "stoir-inventory",
   "version": "1.0.0",
-  "description": "STOIR - Sistem Inventory Management System",
+  "description": "Stoir - Sistem Inventory Management System",
+  "author": "Stoir Team",
   "type": "module",
   "main": "electron/main.cjs",
   "scripts": {
@@ -9,6 +10,9 @@
     "build": "vite build",
     "electron:dev": "concurrently -k \"npm:dev\" \"wait-on http://localhost:3000 && electron .\"",
     "electron:build": "npm run build",
+    "electron:pack": "npm run build && electron-builder --dir",
+    "electron:dist": "npm run build && electron-builder",
+    "electron:dist:win": "npm run build && electron-builder --win",
     "preview": "vite preview",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest",
@@ -60,6 +64,39 @@
     "vitest": "^3.2.4",
     "concurrently": "^9.2.1",
     "electron": "^35.0.0",
+    "electron-builder": "^26.0.12",
     "wait-on": "^8.0.4"
+  },
+  "build": {
+    "appId": "com.stoir.inventory",
+    "productName": "Stoir",
+    "forceCodeSigning": false,
+    "directories": {
+      "output": "release"
+    },
+    "files": [
+      "dist/**",
+      "electron/**",
+      "package.json"
+    ],
+    "win": {
+      "icon": "build/icon.ico",
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        }
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "installerIcon": "build/icon.ico",
+      "uninstallerIcon": "build/icon.ico",
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    }
   }
 }
